--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,43 @@
 [build-system]
-requires = ["setuptools>=42"]
+requires = ["setuptools>=65.5.0", "wheel>=0.40.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "health_simplified"
 version = "0.1.0"
 description = "A CLI application for tracking nutrition and meal planning"
-authors = [{name = "Your Name", email = "your.email@example.com"}]
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
 readme = "README.md"
 requires-python = ">=3.8"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Python :: 3.8",
+    "Intended Audience :: End Users/Desktop",
+]
+keywords = ["health", "tracking", "nutrition", "cli"]
 dependencies = [
     "typer>=0.9.0",
     "sqlalchemy>=2.0.0",
 ]
 
 [project.scripts]
-health-tracker = "health_simplified.cli:app"
+health-tracker = "health_simplified.cli.main:app"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=3.0.0",
+    "ipython>=8.0.0",
+]
+
+[project.urls]
+Homepage = "https://github.com/yourusername/health-simplified"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["health_simplified*"]
+
+[tool.setuptools.package-data]
+"health_simplified" = ["*.sql", "*.json"]
